--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,12 +1,33 @@
-h1 {
-    color: #27aedb;
-    text-align: center;
-    }
-    
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
 
-button{
-    color: #27aedb;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+.app{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    min-height: 100vh;
+}
+
+.textarea{
+    background-color: rgb(242, 239, 239);
+}
+
+.preview{
+    background-color: rgb(233, 230, 230);
+}
+
+textarea{
+    width: 100%;
+    height: 100%;
+    padding-left:20px;
+    padding-top:10px;
+    font-size: 18px;
+}
+pre{
+    font-weight: bold;
+    font-size: 24px;
+    padding:24px;
+    font-family: sans-serif;
 }
